--- a/김희진2/index.html
+++ b/김희진2/index.html
@@ -22,11 +22,17 @@
             </ul>
         </div>
         <div class="right">
-            <div>time : 383478288</div>
-            <div>weather : rain
-            </div>
+            <div>data : 383478288</div>
+            <div>weather : rain</div>
+        </div>
     </header>
     <!-- //header -->
+
+    <div class="weather">
+        <div>time : <span class="rightNum">383478288</span></div>
+        <div>weather : rain</div>
+    </div>
+    <!-- //weather -->
 
     <div id="section1">
         <div class="desc split">
@@ -58,6 +64,17 @@
                 다시한번 프론트앤드라는 꿈을 꾸며 배움을 익힐때도 저의 이러한 삶의 모토로 늘 어려움을 극복해 나갈것입니다.<br>
                 신입으로써 항상 늘 내것이 된다라는 마음가짐으로 감사하게 삶과 일을 대하고 싶습니다!
             </p>
+        </div>
+        <div class="about2">
+            <div class="img1">
+                <img src="" alt="">
+            </div>
+            <div class="img2"></div>
+            <div class="img3"></div>
+            <div class="img4"></div>
+            <div class="img5"></div>
+            <div class="img6"></div>
+            <div class="img7"></div>
         </div>
     </div>
 
@@ -105,7 +122,142 @@
     </div>
     <!-- //section3 -->
 
-    <div id="section4"></div>
+    <div id="section4">
+        <div class="desc split">
+            We are a design agency based in Copenhagen. With a strong belief in strategically founded and highly crafted
+            digital experiences
+        </div>
+        <div class="text">
+            <div>code</div>
+            <div>list</div>
+            <div class="imgWrap">
+                <div class="img"></div>
+            </div>
+        </div>
+        <div class="list">
+            <ul>
+                <li>
+                    <span>coding</span>
+                    <em>Awwwards</em>
+                    <strong>유기동물 플랫폼 웹사이트입니다. 유기동물들을 입양하고 정보를 공유하는 플랫폼입니다</strong>
+                    <i class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="34" height="27" viewBox="0 0 34 27" fill="#F14620">
+                            <path d="M28.6726 0H26.4629V2.15055H28.6726V0Z" fill="F14620"></path>
+                            <path d="M28.6726 2.64844H26.4629V4.79899H28.6726V2.64844Z" fill="F14620"></path>
+                            <path d="M28.6726 5.29297H26.4629V7.44352H28.6726V5.29297Z" fill="F14620"></path>
+                            <path d="M28.6726 7.94141H26.4629V10.092H28.6726V7.94141Z" fill="F14620"></path>
+                            <path d="M28.6726 10.5859H26.4629V12.7365H28.6726V10.5859Z" fill="F14620"></path>
+                            <path d="M28.6726 13.2344H26.4629V15.3849H28.6726V13.2344Z" fill="F14620"></path>
+                            <path d="M28.6726 15.9102H26.4629V18.0607H28.6726V15.9102Z" fill="F14620"></path>
+                            <path d="M31.323 2.64844H29.1133V4.79899H31.323V2.64844Z" fill="F14620"></path>
+                            <path d="M31.323 5.29297H29.1133V7.44352H31.323V5.29297Z" fill="F14620"></path>
+                            <path d="M31.3228 7.94141H29.113V10.092H31.3228V7.94141Z" fill="F14620"></path>
+                            <path d="M31.323 10.5859H29.1133V12.7365H31.323V10.5859Z" fill="F14620"></path>
+                            <path d="M31.3228 13.2344H29.113V15.3849H31.3228V13.2344Z" fill="F14620"></path>
+                            <path d="M33.9734 5.29297H31.7637V7.44352H33.9734V5.29297Z" fill="F14620"></path>
+                            <path d="M33.9734 7.94141H31.7637V10.092H33.9734V7.94141Z" fill="F14620"></path>
+                            <path d="M33.9734 10.5859H31.7637V12.7365H33.9734V10.5859Z" fill="F14620"></path>
+                            <path d="M20.7156 2.64844H18.5059V4.79899H20.7156V2.64844Z" fill="F14620"></path>
+                            <path d="M20.7156 5.29297H18.5059V7.44352H20.7156V5.29297Z" fill="F14620"></path>
+                            <path d="M20.7156 7.94141H18.5059V10.092H20.7156V7.94141Z" fill="F14620"></path>
+                            <path d="M20.7156 10.5859H18.5059V12.7365H20.7156V10.5859Z" fill="F14620"></path>
+                            <path d="M20.7156 13.2344H18.5059V15.3849H20.7156V13.2344Z" fill="F14620"></path>
+                            <path d="M20.7156 15.9102H18.5059V18.0607H20.7156V15.9102Z" fill="F14620"></path>
+                            <path d="M20.7156 18.5547H18.5059V20.7052H20.7156V18.5547Z" fill="F14620"></path>
+                            <path d="M20.7156 21.2031H18.5059V23.3537H20.7156V21.2031Z" fill="F14620"></path>
+                            <path d="M23.3679 0H21.1582V2.15055H23.3679V0Z" fill="F14620"></path>
+                            <path d="M23.3679 2.64844H21.1582V4.79899H23.3679V2.64844Z" fill="F14620"></path>
+                            <path d="M23.3679 5.29297H21.1582V7.44352H23.3679V5.29297Z" fill="F14620"></path>
+                            <path d="M23.3679 7.94141H21.1582V10.092H23.3679V7.94141Z" fill="F14620"></path>
+                            <path d="M23.3679 10.5859H21.1582V12.7365H23.3679V10.5859Z" fill="F14620"></path>
+                            <path d="M23.3679 13.2344H21.1582V15.3849H23.3679V13.2344Z" fill="F14620"></path>
+                            <path d="M23.3679 15.9102H21.1582V18.0607H23.3679V15.9102Z" fill="F14620"></path>
+                            <path d="M23.3679 18.5547H21.1582V20.7052H23.3679V18.5547Z" fill="F14620"></path>
+                            <path d="M26.0203 0H23.8105V2.15055H26.0203V0Z" fill="F14620"></path>
+                            <path d="M26.0203 2.64844H23.8105V4.79899H26.0203V2.64844Z" fill="F14620"></path>
+                            <path d="M26.0203 5.29297H23.8105V7.44352H26.0203V5.29297Z" fill="F14620"></path>
+                            <path d="M26.0203 7.94141H23.8105V10.092H26.0203V7.94141Z" fill="F14620"></path>
+                            <path d="M26.0203 10.5859H23.8105V12.7365H26.0203V10.5859Z" fill="F14620"></path>
+                            <path d="M26.0203 13.2344H23.8105V15.3849H26.0203V13.2344Z" fill="F14620"></path>
+                            <path d="M26.0203 15.9102H23.8105V18.0607H26.0203V15.9102Z" fill="F14620"></path>
+                            <path d="M12.7329 0H10.5232V2.15055H12.7329V0Z" fill="F14620"></path>
+                            <path d="M12.7332 2.64844H10.5234V4.79899H12.7332V2.64844Z" fill="F14620"></path>
+                            <path d="M12.7332 5.29297H10.5234V7.44352H12.7332V5.29297Z" fill="F14620"></path>
+                            <path d="M12.7329 7.94141H10.5232V10.092H12.7329V7.94141Z" fill="F14620"></path>
+                            <path d="M12.7332 10.5859H10.5234V12.7365H12.7332V10.5859Z" fill="F14620"></path>
+                            <path d="M12.7329 13.2344H10.5232V15.3849H12.7329V13.2344Z" fill="F14620"></path>
+                            <path d="M12.7332 15.9102H10.5234V18.0607H12.7332V15.9102Z" fill="F14620"></path>
+                            <path d="M12.7329 18.5547H10.5232V20.7052H12.7329V18.5547Z" fill="F14620"></path>
+                            <path d="M15.3836 2.64844H13.1738V4.79899H15.3836V2.64844Z" fill="F14620"></path>
+                            <path d="M15.3836 5.29297H13.1738V7.44352H15.3836V5.29297Z" fill="F14620"></path>
+                            <path d="M15.3836 7.94141H13.1738V10.092H15.3836V7.94141Z" fill="F14620"></path>
+                            <path d="M15.3836 10.5859H13.1738V12.7365H15.3836V10.5859Z" fill="F14620"></path>
+                            <path d="M15.3836 13.2344H13.1738V15.3849H15.3836V13.2344Z" fill="F14620"></path>
+                            <path d="M15.3836 15.9102H13.1738V18.0607H15.3836V15.9102Z" fill="F14620"></path>
+                            <path d="M15.3836 18.5547H13.1738V20.7052H15.3836V18.5547Z" fill="F14620"></path>
+                            <path d="M15.3836 21.2031H13.1738V23.3537H15.3836V21.2031Z" fill="F14620"></path>
+                            <path d="M18.0379 5.29297H15.8281V7.44352H18.0379V5.29297Z" fill="F14620"></path>
+                            <path d="M18.0379 7.94141H15.8281V10.092H18.0379V7.94141Z" fill="F14620"></path>
+                            <path d="M18.0379 10.5859H15.8281V12.7365H18.0379V10.5859Z" fill="F14620"></path>
+                            <path d="M18.0379 13.2344H15.8281V15.3849H18.0379V13.2344Z" fill="F14620"></path>
+                            <path d="M18.0379 15.9102H15.8281V18.0607H18.0379V15.9102Z" fill="F14620"></path>
+                            <path d="M18.0379 18.5547H15.8281V20.7052H18.0379V18.5547Z" fill="F14620"></path>
+                            <path d="M18.0379 21.2031H15.8281V23.3537H18.0379V21.2031Z" fill="F14620"></path>
+                            <path d="M18.0379 23.8516H15.8281V26.0021H18.0379V23.8516Z" fill="F14620"></path>
+                            <path d="M4.78006 2.64844H2.57031V4.79899H4.78006V2.64844Z" fill="F14620"></path>
+                            <path d="M4.78006 5.29297H2.57031V7.44352H4.78006V5.29297Z" fill="F14620"></path>
+                            <path d="M4.78006 7.94141H2.57031V10.092H4.78006V7.94141Z" fill="F14620"></path>
+                            <path d="M4.78006 10.5859H2.57031V12.7365H4.78006V10.5859Z" fill="F14620"></path>
+                            <path d="M4.78006 13.2344H2.57031V15.3849H4.78006V13.2344Z" fill="F14620"></path>
+                            <path d="M7.43045 0H5.2207V2.15055H7.43045V0Z" fill="F14620"></path>
+                            <path d="M7.43045 5.29297H5.2207V7.44352H7.43045V5.29297Z" fill="F14620"></path>
+                            <path d="M7.43045 7.94141H5.2207V10.092H7.43045V7.94141Z" fill="F14620"></path>
+                            <path d="M7.43045 10.5859H5.2207V12.7365H7.43045V10.5859Z" fill="F14620"></path>
+                            <path d="M7.43045 13.2344H5.2207V15.3849H7.43045V13.2344Z" fill="F14620"></path>
+                            <path d="M7.43045 15.9102H5.2207V18.0607H7.43045V15.9102Z" fill="F14620"></path>
+                            <path d="M10.0828 0H7.87305V2.15055H10.0828V0Z" fill="F14620"></path>
+                            <path d="M10.0828 2.64844H7.87305V4.79899H10.0828V2.64844Z" fill="F14620"></path>
+                            <path d="M10.0828 5.29297H7.87305V7.44352H10.0828V5.29297Z" fill="F14620"></path>
+                            <path d="M10.0828 7.94141H7.87305V10.092H10.0828V7.94141Z" fill="F14620"></path>
+                            <path d="M10.0828 10.5859H7.87305V12.7365H10.0828V10.5859Z" fill="F14620"></path>
+                            <path d="M10.0828 13.2344H7.87305V15.3849H10.0828V13.2344Z" fill="F14620"></path>
+                            <path d="M10.0828 15.9102H7.87305V18.0607H10.0828V15.9102Z" fill="F14620"></path>
+                            <path d="M2.20974 5.29297H0V7.44352H2.20974V5.29297Z" fill="F14620"></path>
+                            <path d="M2.20974 7.94141H0V10.092H2.20974V7.94141Z" fill="F14620"></path>
+                            <path d="M2.20974 10.5859H0V12.7365H2.20974V10.5859Z" fill="F14620"></path>
+                          </svg>
+                    </i>
+                </li>
+                <li>
+                    <span>coding</span>
+                    <em>Javascript</em>
+                    <strong>자바스크립트 노트입니다. 기초부터 배운 것을 정리햇습니다.</strong>
+                </li>
+                <li>
+                    <span>coding</span>
+                    <em>Quiz Game</em>
+                    <strong>자바스크립트를 이용하여 퀴즈게임을 만들었습니다. 연도별로 선택하여 시험을 볼 수 있습니다.</strong>
+                </li>
+                <li>
+                    <span>coding</span>
+                    <em>Mouse Effect</em>
+                    <strong>마우스를 이용한 효과입니다. 마우스의 다양한 효과이빈다.</strong>
+                </li>
+                <li>
+                    <span>Awards</span>
+                    <em>Awwwards</em>
+                    <strong>자바스크립트를 이용하여 퀴즈게임을 만들었습니다. 연도별로 선택하여 시험을 볼 수 있습니다.</strong>
+                </li>
+                <li>
+                    <span>Awards</span>
+                    <em>Awwwards</em>
+                    <strong>2x Site of the year, 11x Dev award, 22x Site of the day</strong>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!-- //section4 -->
+
     <div id="section5"></div>
     <div id="section6"></div>
 
@@ -115,6 +267,8 @@
     <script src="https://unpkg.com/split-type"></script>
 
     <script>
+        gsap.registerPlugin(ScrollTrigger);
+
         const lenis = new Lenis({
             duration: 1,
             easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t))
@@ -139,8 +293,6 @@
             let words = SplitClient.words;
             let chars = SplitClient.chars;
         })
-
-        gsap.registerPlugin(ScrollTrigger);
 
         const img = document.querySelector('.imgWrap .img');
 
@@ -170,6 +322,27 @@
         });
 
 
+        gsap.to(".weather", {
+            yPercent: 100,  
+            ease: "none",
+            scrollTrigger: {
+                trigger: document.body,
+                start: "top top",
+                end: "bottom bottom",
+                scrub: true
+            }
+        });
+
+        function updateScrollLength() {
+            const scrollLength = window.scrollY; // 현재 스크롤 위치
+            const rightNimElement = document.querySelector('.rightNum');
+            if (rightNimElement) {
+                rightNimElement.textContent = scrollLength;
+            }
+        }
+
+        // 스크롤 이벤트 리스너 추가
+        window.addEventListener('scroll', updateScrollLength);
     </script>
 </body>
 
