--- a/윤지성/index.html
+++ b/윤지성/index.html
@@ -52,9 +52,10 @@
             <div class="date"></div>
         </div>
 
-        <div class="portLayer portLayer1 youtubeLayer">
+        <div class="portLayer portLayer1 youtubeLayer none">
             <div class="portLayer__contents">
                 <h3>Search</h3>
+                
                 <div class="info">
                     <div>
                         <input type="search">
@@ -82,7 +83,6 @@
             </div>
         </div>
 
-        <!-- <div class="portLayer portLayer2 netflix">netflix</div> -->
 
         <div class="layer layer1 about">
             <div class="layer__contents">
@@ -103,9 +103,61 @@
             <div class="layer__footer">😎 윤지성 개발자입니다.</div>
         </div>
 
-        <div class="layer layer2">
-            <div class="layer__contents"></div>
-            <div class="layer__footer">layer2</div>
+        <div class="layer layer2 youtube">
+            <div class="layer__contents">
+                <h3>코딩 유튜버</h3>
+                <span class="small">최신 코딩 관련 영상을 볼 수 있습니다.</span>
+                <span class="mail"></span>
+                <div class="info">
+                    <div>
+                        <input type="search" placeholder="검색">
+                    </div>
+                    <div>
+                        <ul>
+                            <li>all</li>
+                            <li>coding</li>
+                            <li>react</li>
+                            <li>node.js</li>
+                            <li>javascript</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="view">
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                </div>
+            </div>
+            <div class="layer__footer">😏 저는 최신 코딩 유튜버에 관심이 많습니다.</div>
         </div>
 
         <div class="layer layer3">
@@ -117,8 +169,6 @@
             <div class="layer__contents"></div>
             <div class="layer__footer">layer4</div>
         </div>
-
-
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
