--- a/강서현/index.html
+++ b/강서현/index.html
@@ -95,7 +95,20 @@
         </div>
     </div>
     <!-- //section4 -->
-    <div id="section5"></div>
+
+    <div id="section5">
+        <div class="sec5-text">
+            <div class="t1">Efficient<span>효율적인</span></div>
+            <div class="t2">Analytical<span>분석적인</span></div>
+            <div class="t3">Organized<span>조직적인</span></div>
+            <div class="t4">Meticulous<span>꼼꼼한</span></div>
+            <div class="t5">Cooperative<span>협조적인</span></div>
+        </div>
+    </div>
+    <!-- //section5 -->
+
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
